fixat med avbrytaknapp bland annat

--- a/design/design/Views/Home/FragorOchSvarAdmin.cshtml
+++ b/design/design/Views/Home/FragorOchSvarAdmin.cshtml
@@ -591,7 +591,9 @@
                                 </div>
                                 <div class="falt">
                                     <button type="submit" class="btn btn-success">Spara <span class="glyphicon glyphicon-floppy-saved" style="text-align:right;"></span></button>
-                                </div>
+                                    <button type="submit" class="btn btn-danger" style="margin-left:10px;">Avbryt</button>
+
+                                 </div>
 
                             </div>
                             <div class="infotext" id="infotext" style="display: block;">
