--- a/design/design/Views/Home/NyheterAdmin.cshtml
+++ b/design/design/Views/Home/NyheterAdmin.cshtml
@@ -120,7 +120,9 @@
                             <div class=" col-lg-4">
                                 <div class="falt" style="margin-top:10px;">
                                     <button type="submit" class="btn btn-success">Spara <span class="glyphicon glyphicon-floppy-saved" style="text-align:right;"></span></button>
-                                </div>
+                                    <button type="submit" class="btn btn-danger" style="margin-left:10px;">Avbryt</button>
+
+                                 </div>
                             </div>
                         </div>
 
@@ -155,6 +157,7 @@
                                     Redigera nyhet
                                     <span><i class="glyphicon glyphicon-pencil"></i></span>
                                 </button>
+
                             </div>
 
 
