--- a/design/design/Views/Home/studentboendeAdmin.cshtml
+++ b/design/design/Views/Home/studentboendeAdmin.cshtml
@@ -105,7 +105,8 @@
                     <button type="submit" class="btn btn-danger btn-sm">Ta bort bild <span class="glyphicon glyphicon-trash"></span></button>
                     <div style="margin-top:25px; padding-left:0px;">
 
-                        <button type="submit" class="btn btn-success">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                        <button type="submit" class="btn btn-success" style="margin-right:20px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                        <button type="submit" class="btn btn-danger">Avbryt </button>
 
                     </div>
                 </div>
@@ -126,7 +127,7 @@
                     Redigera
                     <span><i class="glyphicon glyphicon-pencil"></i></span>
                 </button>
-                <div class="redigera" id="redigeralitenbild" style="display:none;">
+                <div class="redigera" id="redigeralitenbild" style="display: none; background-color: #dcdcdc;">
                     <div class="col-md-12">
                         
                         <div class="falt">
@@ -137,7 +138,11 @@
 
                         </div>
                     </div>
-                </div>
+                    <div style="margin-top:25px; padding-left:15px;">
+                        <button type="submit" class="btn btn-success" style="margin-right:20px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                        <button type="submit" class="btn btn-danger" style="margin-left:20px;">Avbryt </button>
+
+                    </div>
 
             </div>
         </div>
@@ -285,8 +290,10 @@
                                 <div>
                                     <br />
 
-                                    <button type="submit" class="btn btn-success" style="margin-top:170px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
-                                </div>
+                                    <button type="submit" class="btn btn-success" style="margin-top:140px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                                    <button type="submit" class="btn btn-danger" style="margin-top:10px;">Avbryt</button>
+
+                                  </div>
                             </div>
                         </div>
 
@@ -435,7 +442,9 @@
                                 <div>
                                     <br />
 
-                                    <button type="submit" class="btn btn-success" style="margin-top:170px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                                    <button type="submit" class="btn btn-success" style="margin-top:140px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                                    <button type="submit" class="btn btn-danger" style="margin-top:10px;">Avbryt</button>
+
                                 </div>
                             </div>
                         </div>
@@ -588,8 +597,10 @@
                                     <div>
                                         <br />
 
-                                        <button type="submit" class="btn btn-success" style="margin-top:170px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
-                                    </div>
+                                        <button type="submit" class="btn btn-success" style="margin-top:140px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                                        <button type="submit" class="btn btn-danger" style="margin-top:10px;">Avbryt</button>
+
+                                     </div>
                                 </div>
                             </div>
 
