--- a/design/design/Views/Admin/Index.cshtml
+++ b/design/design/Views/Admin/Index.cshtml
@@ -19,116 +19,101 @@
 
 <div class="maincontainer1">
 
-    <div class="row ontop">
-       
+    <div class="row ontop" style="margin-left:5%; margin-right:5%;">
+
         <h1 style="text-align:center; color: #e93523; margin-bottom: 30px;">För folk som tycker om att bo!</h1>
-        <div class="col-md-3 col-sm-2 col-lg-3" >
-        </div> <div class="col-md-6 col-sm-8 col-lg-6 indexcarousel">
 
-            <div class="mainbody">
-                <hr /><h2 style="text-align:center; color: black;">Våra fastigheter</h2><hr />
-                <div id="myCarousel1" class="carousel slide" data-interval="false">
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                        <li class="item1 active"></li>
-                        <li class="item2"></li>
-                        <li class="item3"></li>
-                        <li class="item4"></li>
-                        <li class="item5"></li>
-                    </ol>
+        <br />
+        <div class=" col-md-9 col-sm-10 nyhetindex">
+            <hr /><h2 style="text-align:center;">Senaste nytt</h2><hr />
+            <div class="nyhet " style="text-align: center; margin: auto;">
+                <h3>Glad påsk!</h3>
+                <p style="text-align:left;">
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
 
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner" role="listbox">
-                       
-                        <div class="item active">
-                            <img src="~/Content/Images/Liljan%209%20-%201.jpg" alt="Karlslundsgatan 10 A-D">
-                            <div class=" carousel-caption">Karlslundsgatan 10 A-D</div>
+                    <br />
+                    <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                </p>
+                <p style="text-align:right;">2017-04-12</p>
+            </div>
+            <a class="link" href="~/Home/Nyheter">Se fler nyheter >></a>
+        </div>
+    </div>
+
+      
+
+        <div class=" row">
+            <div class="col-md-3 col-sm-2 col-lg-3">
+            </div>
+            <div class="col-md-6 col-sm-8 col-lg-6 indexcarousel">
+
+                <div class="mainbody">
+                    <hr /><h2 style="text-align:center; color: black;">Våra fastigheter</h2><hr />
+                    <div id="myCarousel1" class="carousel slide" data-interval="false">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li class="item1 active"></li>
+                            <li class="item2"></li>
+                            <li class="item3"></li>
+                            <li class="item4"></li>
+                            <li class="item5"></li>
+                        </ol>
+
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner" role="listbox">
+
+                            <div class="item active">
+                                <img src="~/Content/Images/Liljan%209%20-%201.jpg" alt="Karlslundsgatan 10 A-D">
+                                <div class=" carousel-caption">Karlslundsgatan 10 A-D</div>
+                            </div>
+                            <div class="item">
+                                <img src="~/Content/Images/Brandstationen%206%20-%203.jpg" alt="Kyrkogatan 18-20">
+                                <div class=" carousel-caption">Kyrkogatan 18-20</div>
+                            </div>
+                            <div class="item">
+                                <img src="~/Content/Images/Fetknoppen%202%20-%202.jpg" alt="Adress">
+                                <div class=" carousel-caption">Adress</div>
+                            </div>
+                            <div class="item">
+                                <img src="~/Content/Images/Krakan%209%20-%201.jpg" alt="Adress">
+                                <div class=" carousel-caption">Adress</div>
+                            </div>
+
+                            <div class="item ">
+                                <img src="~/Content/Images/Blaslampan%202%20-%203.jpg" alt="Rynningegatan 27-37">
+                                <div class=" carousel-caption">Rynningegatan 27-37</div>
+                            </div>
                         </div>
-                        <div class="item">
-                            <img src="~/Content/Images/Brandstationen%206%20-%203.jpg" alt="Kyrkogatan 18-20">
-                            <div class=" carousel-caption">Kyrkogatan 18-20</div>
-                        </div>
-                        <div class="item">
-                            <img src="~/Content/Images/Fetknoppen%202%20-%202.jpg" alt="Adress">
-                            <div class=" carousel-caption">Adress</div>
-                        </div>
-                        <div class="item">
-                            <img src="~/Content/Images/Krakan%209%20-%201.jpg" alt="Adress">
-                            <div class=" carousel-caption">Adress</div>
-                        </div>
-                      
-                        <div class="item ">
-                            <img src="~/Content/Images/Blaslampan%202%20-%203.jpg" alt="Rynningegatan 27-37">
-                        <div class=" carousel-caption">Rynningegatan 27-37</div>
-                        </div>
+
+                        <!-- Left and right controls -->
+                        <a class="carousel-control left" href="#myCarousel1" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                        </a>
+                        <a class="carousel-control right" href="#myCarousel1" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                        </a>
                     </div>
-
-                    <!-- Left and right controls -->
-                    <a class="carousel-control left" href="#myCarousel1" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                    </a>
-                    <a class="carousel-control right" href="#myCarousel1" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                    </a>
                 </div>
-            </div>
-            <a class="link" href="~/Home/Varafastigheter">Se fler av våra fastigheter >></a>
+                <a class="link" href="~/Home/Varafastigheter">Se fler av våra fastigheter >></a>
 
-
-        </div>
-        @*<div class="col-md-5 col-sm-5 col-lg-5">
-            <div>
-                <h2 style="text-align: left; color: black;">Varför ska man hyra av oss?</h2>
-                <div>
-                    <p style="font-size:16px;">
-                        Vi har ägande, skötsel och drift i egen regi.
-                        <br />
-                        Vi har lång erfarenhet av hyresfastigheter och hyresgäster.
-                    </p>
-                    <br />
-                    <br />
-                </div>
             </div>
-            <br />
-            <br />
-         
-            <br />
-            <br />
-        </div>*@
-        </div>
+
+            </div>
+        
+
+    <hr />   
    
   
     
-        <div class=" row" style="margin-left:5%; margin-right:5%;">
-            
-            <br />
-            <div class=" col-md-9 col-sm-10 nyhetindex">
-                <hr /><h2 style="text-align:center;">Senaste nytt</h2><hr />
-                <div class="nyhet " style="text-align: center; margin: auto;">
-                    <h3>Glad påsk!</h3>
-                    <p style="text-align:left;">
-                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-
-                        <br />
-                        <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                    </p>
-                    <p style="text-align:right;">2017-04-12</p>
-                </div>
-                <a class="link" href="~/Home/Nyheter">Se fler nyheter >></a>
-            </div>
-
-
-        </div>
   
 
-    <hr />
 
    
         <div class="col-md-4 col-sm-6 facebook" style="float:none; margin:auto;">
