Fix på kontakt admin

--- a/design/design/Views/Home/KontaktAdmin.cshtml
+++ b/design/design/Views/Home/KontaktAdmin.cshtml
@@ -21,8 +21,8 @@
                         Redigera
                         <span><i class="glyphicon glyphicon-pencil"></i></span>
                     </button>
-                    <div class="redigera" id="redigera" style="display:none;">
-                        <div class="col-md-12">
+                    <div class="redigera" id="redigera" style="display: none; background-color: #dcdcdc;">
+                        <div class="col-md-12" style="background-color: #dcdcdc;">
                             <div class="falt">
                                 <label>
                                     Rubrik:
@@ -36,7 +36,8 @@
                                     Text:
                                 </label>
                                 <img src="~/Content/Images/publish-wordpress-page.jpg" class="img-responsive" alt="Cinque Terre">
-
+                                <button type="submit" class="btn btn-success" style="margin: 10px 10px 10px 0;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                                <button type="submit" class="btn btn-danger" style="margin: 10px 0 10px 0;">Avbryt</button>
                             </div>
                         </div>
                     </div>
@@ -220,7 +221,8 @@
                                     Text:
                                 </label>
                                 <img src="~/Content/Images/publish-wordpress-page.jpg" class="img-responsive" alt="Cinque Terre" style="border:1px solid grey;">
-                                <button type="submit" class="btn btn-success" style="margin-top:10px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                                <button type="submit" class="btn btn-success" style="margin: 10px 10px 10px 0;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                            <button type="submit" class="btn btn-danger" style="margin: 10px 0 10px 0;">Avbryt</button>
 
 
                         </div>
