--- a/design/design/Views/Home/FragorOchSvarAdmin.cshtml
+++ b/design/design/Views/Home/FragorOchSvarAdmin.cshtml
@@ -14,7 +14,7 @@
         <legend style="color:#e93523;">Lägg till ny fråga</legend>
         <div class="row" style="background-color:#dcdcdc;">
 
-            <div class=" col-md-6">
+            <div class=" col-md-12">
                 <div class="falt">
                     <label>
                         Fråga:
@@ -28,7 +28,7 @@
                     <label>
                         Svar:
                     </label>
-                    <img src="~/Content/Images/publish-wordpress-page.jpg" />
+                    <img src="~/Content/Images/publish-wordpress-page.jpg" class=" img-responsive"/>
                 </div>
 
                 <div class="falt">
@@ -126,11 +126,11 @@
                                     </div>
 
 
-                                    <div class="row">
+               
 
-                                        <div class="redigera" id="redigera2" style="display:none; ">
+                                        <div class="redigera" id="redigera2" style="display: none; background-color:#dcdcdc;">
                                             <br />
-                                            <div class="col-md-12 col-lg-12">
+                                         
                                                 <div class="falt">
                                                     <label>
                                                         Fråga:
@@ -144,13 +144,12 @@
                                                     <label>
                                                         Svar:
                                                     </label>
-                                                    <img src="~/Content/Images/publish-wordpress-page.jpg" class="img-responsive" alt="Cinque Terre">
-                                                    <button type="submit" class="btn btn-success" style="margin-top:75px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
-
+                                                    <img src="~/Content/Images/publish-wordpress-page.jpg" class="img-responsive" alt="Cinque Terre" style="border:1px solid grey; width:500px;">
+                                                    <button type="submit" class="btn btn-success" style="margin: 10px 10px 10px 0">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                                                    <button type="submit" class="btn btn-danger" style="margin: 10px 10px 10px 0">Avbryt</button>
                                                 </div>
 
 
-                                            </div>
                                             
                                             <div>
                                                 
@@ -159,7 +158,7 @@
                                         </div>
 
 
-                                    </div>
+                                  
 
 
                                 </div>
