--- a/design/design/Views/Home/VarafastigheterAdmin.cshtml
+++ b/design/design/Views/Home/VarafastigheterAdmin.cshtml
@@ -319,7 +319,8 @@
                                 <div>
                                     <br />
 
-                                    <button type="submit" class="btn btn-success" style="margin-top:170px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                                    <button type="submit" class="btn btn-success" style="margin-top:140px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                                    <button type="submit" class="btn btn-danger" style="margin-top:10px;">Avbryt</button>
                                 </div>
                             </div>
                         </div>
@@ -480,8 +481,9 @@
                                 <div>
                                     <br />
 
-                                    <button type="submit" class="btn btn-success" style="margin-top:170px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
-                                </div>
+                                    <button type="submit" class="btn btn-success" style="margin-top:140px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                                    <button type="submit" class="btn btn-danger" style="margin-top:10px;">Avbryt</button>
+                                 </div>
                             </div>
                         </div>
 
@@ -635,7 +637,8 @@
                                 <div>
                                     <br />
 
-                                    <button type="submit" class="btn btn-success" style="margin-top:170px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                                    <button type="submit" class="btn btn-success" style="margin-top:140px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                                    <button type="submit" class="btn btn-danger" style="margin-top:10px;">Avbryt</button>
                                 </div>
                             </div>
                         </div>
