--- a/design/design/Views/Home/VarafastigheterAdmin.cshtml
+++ b/design/design/Views/Home/VarafastigheterAdmin.cshtml
@@ -87,8 +87,8 @@
                     </div>
              
                  
-                <div class="col-md-10 col-lg-7" style="padding-left:0px;">
-                    <label>Visa på startsidan:</label><br />
+                <div class="col-md-10 col-lg-12" style="padding-left:0px;">
+                    <label>Visa fastighetens bild på startsidan:</label><br />
                     <form>
                         <input type="radio" name="val" value="Ja"> Ja
                         <input type="radio" name="val" value="Nej"> Nej<br />
@@ -292,9 +292,9 @@
                                 </div>
 
 
-                                <div class="col-md-10 col-lg-7" style="padding-left:0px;">
+                                <div class="col-md-10 col-lg-12" style="padding-left:0px;">
                                     <div class=" falt">
-                                        <label>Visa på startsidan:</label><br />
+                                        <label>Visa fastighetens bild på startsidan:</label><br />
                                         <form>
                                             <input type="radio" name="val" value="Ja"> Ja
                                             <input type="radio" name="val" value="Nej" checked> Nej<br />
@@ -396,29 +396,29 @@
                                         Område:
                                     </label>
                                     <div class="input-group">
-                                        <input name="state" placeholder="Örebro Norr" class="form-control" type="text">
+                                        <input name="state" placeholder="Örebro Centralt" class="form-control" type="text">
                                     </div>
                                 </div>
 
                                 <div class="falt">
                                     <label>Adress:</label>
                                     <div class="input-group">
-                                        <input name="state" required placeholder="Rynningegatan 27-37" class="form-control" type="text">
+                                        <input name="state" required placeholder="Kyrkogatan 20" class="form-control" type="text">
                                     </div>
                                 </div>
 
                                 <div class="falt">
                                     <label>Antal lägenheter i fastigheten:</label>
                                     <div class="input-group">
-                                        <input name="deltagareinput" placeholder="20" class="form-control input-md" type="text">
+                                        <input name="deltagareinput" placeholder="15" class="form-control input-md" type="text">
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-lg-12" style="padding-left:0px;">
                                     <label>Typ av fastighet:</label><br />
                                     <form>
                                         <input type="radio" name="val" value="Student"> Student
-                                        <input type="radio" name="val" value="Senior"> Senior
-                                        <input type="radio" name="val" value="Övrigt" checked> Övrigt<br>
+                                        <input type="radio" name="val" value="Senior" checked> Senior
+                                        <input type="radio" name="val" value="Övrigt" > Övrigt<br>
                                     </form>
                                 </div>
                             </div>
@@ -428,7 +428,7 @@
 
                                     <div class="col-md-7">
 
-                                        <input name="state" placeholder="~/Content/Images/Blaslampan%202%20-%203.jpg" class="form-control" style="border-radius:0px;" type="text">
+                                        <input name="state" placeholder="~/Content/Images/Brandstationen 6 - 3.jpg" class="form-control" style="border-radius:0px;" type="text">
                                     </div>
                                     <div class=" col-md-3 col-lg-3" style="padding-left:0px;">
                                         <button type="submit" class="btn btn-default">Ladda upp <span class="glyphicon glyphicon-file"></span></button>
@@ -454,9 +454,9 @@
                                 </div>
 
 
-                                <div class="col-md-10 col-lg-7" style="padding-left:0px;">
+                                <div class="col-md-10 col-lg-12" style="padding-left:0px;">
                                     <div class=" falt">
-                                        <label>Visa på startsidan:</label><br />
+                                        <label>Visa fastighetens bild på startsidan:</label><br />
                                         <form>
                                             <input type="radio" name="val" value="Ja"> Ja
                                             <input type="radio" name="val" value="Nej" checked> Nej<br />
@@ -552,21 +552,21 @@
                                         Område:
                                     </label>
                                     <div class="input-group">
-                                        <input name="state" placeholder="Örebro Norr" class="form-control" type="text">
+                                        <input name="state" placeholder="Örebro Centralt " class="form-control" type="text">
                                     </div>
                                 </div>
 
                                 <div class="falt">
                                     <label>Adress:</label>
                                     <div class="input-group">
-                                        <input name="state" required placeholder="Rynningegatan 27-37" class="form-control" type="text">
+                                        <input name="state" required placeholder="Slottsgatan 7" class="form-control" type="text">
                                     </div>
                                 </div>
 
                                 <div class="falt">
                                     <label>Antal lägenheter i fastigheten:</label>
                                     <div class="input-group">
-                                        <input name="deltagareinput" placeholder="20" class="form-control input-md" type="text">
+                                        <input name="deltagareinput" placeholder="40" class="form-control input-md" type="text">
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-lg-12" style="padding-left:0px;">
@@ -584,7 +584,7 @@
 
                                     <div class="col-md-7">
 
-                                        <input name="state" placeholder="~/Content/Images/Blaslampan%202%20-%203.jpg" class="form-control" style="border-radius:0px;" type="text">
+                                        <input name="state" placeholder="~/Content/Images/Blaslampan 2 - 1.jpg" class="form-control" style="border-radius:0px;" type="text">
                                     </div>
                                     <div class=" col-md-3 col-lg-3" style="padding-left:0px;">
                                         <button type="submit" class="btn btn-default">Ladda upp <span class="glyphicon glyphicon-file"></span></button>
@@ -597,7 +597,7 @@
                                         <div class="falt">
                                             <label>Länk till karta:</label>
                                             <div class="input-group">
-                                                <input name="state" placeholder="https://goo.gl/maps/boNdvNsyb1R2" class="form-control" type="text">
+                                                <input name="state" placeholder="https://goo.gl/maps/6q7cYjMi3Qy" class="form-control" type="text">
                                             </div>
                                         </div>
                                     </div>
@@ -610,9 +610,9 @@
                                 </div>
 
 
-                                <div class="col-md-10 col-lg-7" style="padding-left:0px;">
+                                <div class="col-md-10 col-lg-12" style="padding-left:0px;">
                                     <div class=" falt">
-                                        <label>Visa på startsidan:</label><br />
+                                        <label>Visa fastighetens bild på startsidan:</label><br />
                                         <form>
                                             <input type="radio" name="val" value="Ja"> Ja
                                             <input type="radio" name="val" value="Nej" checked> Nej<br />
