--- a/design/design/Views/Shared/_LayoutAdmin.cshtml
+++ b/design/design/Views/Shared/_LayoutAdmin.cshtml
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div style="background-color:white; padding-top:50px; padding-left:25px; padding-right:25px;">
-            <div style="text-align:right;"><a class="btn btn-default btn-lg " href="~/Home/Index" style="background-color:black; color:white;">Logga ut</a></div>
+            <div style="text-align:right;"><a class="btn btn-default btn-lg btn-loggaut" href="~/Home/Index" style="background-color:black; color:white;">Logga ut</a></div>
             <div style="margin-top:20px;">
                 <a class="btn btn-default btn-sm" href="~/Home/NyheterAdmin">Nyheter</a>
                 <a class="btn btn-default  btn-sm" href="~/Home/FelanmalanAdmin">Felanmälan</a>
