--- a/design/design/Content/bootstrap.css
+++ b/design/design/Content/bootstrap.css
@@ -1307,6 +1307,10 @@ p {
 }
 /*Här är för mobilskärm*/
 
+div.mobil-info{
+ 
+   margin-left:0px;
+}
 div.skicka{
     margin-top: 10px;
 }
@@ -2240,6 +2244,12 @@ h6,
     padding-left: 20px;*/
 
 } 
+
+        div.information{
+   margin-left:30px;
+    margin-right:30px;
+    color:black;
+}
            
 div.container-main{
  box-shadow: 0px 2px 25px #8f8f8f;
@@ -7618,11 +7628,7 @@ left: 0;
 width: 100% !important;
 height: 100% !important;
 }
-div.information{
-   margin-left:30px;
-    margin-right:30px;
-    color:black;
-}
+
 
 div.information1{
    /*margin-left:30px;*/
