--- a/design/design/Views/Home/LedigaObjektAdmin.cshtml
+++ b/design/design/Views/Home/LedigaObjektAdmin.cshtml
@@ -84,7 +84,7 @@
                 <div class="falt">
 
                     <label>
-                        Hyr-id:
+                        Hyr-id: *
                     </label>
                     <div class="input-group">
                         <input name="state" placeholder="" class="form-control" type="text">
@@ -183,7 +183,7 @@
                       
                         <div class="btn-group">
                             <button data-toggle="dropdown" class="btn btn-default dropdown-toggle" data-placeholder="false">
-                                jag önskar
+                                övriga val
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu drop">
@@ -192,8 +192,10 @@
                                 <li><input type="checkbox" id="ID" name="Hiss" value="Hiss"><label for="ID"> Hiss</label>
                                 <li><input type="checkbox" id="ID" name="Kokvrå" value="Kokvrå"><label for="ID"> Kokvrå</label>
                                 <li><input type="checkbox" id="ID" name="Radhus" value="Radhus"><label for="ID"> Radhus</label>
-
-                            </ul>
+                                <li><input type="checkbox" id="ID" name="Hiss" value="Hiss"><label for="ID"> Ej balkong</label>
+                                <li><input type="checkbox" id="ID" name="Kokvrå" value="Kokvrå"><label for="ID"> Ej hiss</label>
+                                <li><input type="checkbox" id="ID" name="Radhus" value="Radhus"><label for="ID"> Kallhyra</label>
+</ul>
                         </div>
                     </div>
                 </div>
@@ -287,10 +289,10 @@
                     <button type="submit" class="btn btn-danger btn-lg">Ta bort objekt <span class="glyphicon glyphicon-trash"></span></button>
 
                 </div>
-                <div class=" col-md-3 col-lg-3" style="margin-top:25px; padding-left:0px; padding-bottom:10px;">
+                <div class=" col-md-9 col-lg-9" style="margin-left:205px; margin-top:25px; padding-left:0px; padding-bottom:10px;">
 
                     <button type="submit" class="btn btn-default btn-sm">Rensa fält</button>
-
+                    
                 </div>
             </div>
              
