--- a/design/design/Views/Home/studentboendeAdmin.cshtml
+++ b/design/design/Views/Home/studentboendeAdmin.cshtml
@@ -265,7 +265,7 @@
 
                                 <div class="col-md-10 col-lg-7" style="padding-left:0px;">
                                     <div class=" falt">
-                                        <label>Visa på startsidan:</label><br />
+                                        <label>Visa fastighetens bild på startsidan:</label><br />
                                         <form>
                                             <input type="radio" name="val" value="Ja"> Ja
                                             <input type="radio" name="val" value="Nej" checked> Nej<br />
@@ -417,7 +417,7 @@
 
                                 <div class="col-md-10 col-lg-7" style="padding-left:0px;">
                                     <div class=" falt">
-                                        <label>Visa på startsidan:</label><br />
+                                        <label>Visa fastighetens bild på startsidan:</label><br />
                                         <form>
                                             <input type="radio" name="val" value="Ja"> Ja
                                             <input type="radio" name="val" value="Nej" checked> Nej<br />
@@ -572,7 +572,7 @@
 
                                     <div class="col-md-10 col-lg-7" style="padding-left:0px;">
                                         <div class=" falt">
-                                            <label>Visa på startsidan:</label><br />
+                                            <label>Visa fastighetens bild på startsidan:</label><br />
                                             <form>
                                                 <input type="radio" name="val" value="Ja"> Ja
                                                 <input type="radio" name="val" value="Nej" checked> Nej<br />
