--- a/design/design/Views/Account/Login.cshtml
+++ b/design/design/Views/Account/Login.cshtml
@@ -31,7 +31,7 @@
          
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Logga in" class="btn btn-default" />
+                        <a class="btn btn-default" href="~/Home/NyheterAdmin">Logga in</a>
                     </div>
                 </div>
             
